# GoofyAhhOS

./: .gitignore  Cargo.toml  bacon.toml
.cargo/: config.toml
config/: limine.conf
kernel/: Cargo.toml  build.rs  x86_64-kernel.json
kernel/src/: font.rs  lib.rs  main.rs  render.rs
kernel/src/sys/: mod.rs
kernel/src/sys/kernel/: mod.rs
kernel/src/sys/kernel/cpu/: io.rs  mod.rs
kernel/src/sys/kernel/cpu/x86_64/: apic.rs  gdt.rs  interrupts.rs  mod.rs  pics.rs
kernel/src/sys/kernel/drivers/: mod.rs
kernel/src/sys/kernel/drivers/ahci/: ahci.rs  mod.rs  types.rs
kernel/src/sys/kernel/drivers/framebuffer/: mod.rs  render.rs  textwriter.rs
kernel/src/sys/kernel/drivers/serial/: mod.rs  serial.rs
kernel/src/sys/qemu/: mod.rs
kernel/src/sys/std/: mod.rs
kernel/src/tests/: kernel.rs  mod.rs  runner.rs
scripts/: run.sh
