[workspace]
members = [
    "kernel"
]
resolver = "2"

[profile.dev]
opt-level = "z"
debug = true
debug-assertions = true
overflow-checks = true
lto = false
incremental = false
codegen-units = 1

[profile.release]
opt-level = "z"
debug = false
debug-assertions = false
overflow-checks = false
lto = true
incremental = false
codegen-units = 1

[workspace.package]
version = "0.1.0"
edition = "2021"
